samples/_failures_safe/1761796599_7b56bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adcbe61b.c: In function ‘main’:
./samples/SAFE/__tmp_adcbe61b.c:205: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_adcbe61b.c:204:5: error: expected declaration or statement at end of input
  204 |     Token tokens[MAX_TOKENS
      |     ^~~~~
